# vd_rag_bot

./: .env.example  .gitignore  README.md  databasemarte.md  docker-compose.yml  env.example  pyproject.toml  requirements.txt
app/: config.py  db.py  helpers.py  main.py  rag.py
app/chatwoot/: handleContactUpdated.py  handoff.py
app/controller/: bot.py  rag_docs.py
app/db/: __init__.py  connection.py  new_clients.sql  queries.py  repository.py
app/numeric_menu/: menu.py  menus.json
app/rag_engine/: helpers.py  ingest.py  prompts.json  rag.py  rag_handleInput.py  rag_llm.py  rag_memory.py
app/rag_engine/storage/: kb.txt
app/services/: queries.py  repo.py
app/templates/: documents.html  layout.html  login.html  register.html  settings.html
app/twenty/: __init__.py  client.py  people.py
app/web/: views.py
chatwoot/: .env.example  README.md  docker-compose.yaml
controller/: __init__.py  bot.py  folder.py  rag_docs.py  rag_ingest.py
n8n_templates/: Chatwoot to Twenty Contacts Sync.json  Twenty to Chatwoot Contacts Sync.json
postgres-pgadmin/: .env.example  compose.yaml
veriopsbot/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
veriopsbot/app/: main.py
veriopsbot/app/controller/: rag_docs.py  webhooks.py
veriopsbot/app/db/: connection.py  queries.py  repository.py  schema_create.sql
veriopsbot/app/templates/: admin_users.html  documents.html  layout.html  login.html  register.html  settings.html
veriopsbot/app/web/: views.py
veriopsbot/n8n_templates/: Omnichannel to CRM Contacts Sync.json
(+4 files in other folders)
