[project]
name = "vd-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.118.0",
    "httpx>=0.28.1",
    "llama-index>=0.14.5",
    "openai>=1.35.10",
    "psycopg[binary]>=3.2.1",
    "uvicorn[standard]>=0.37.0",
]

[project.scripts]
rag-ingest = "app.rag_engine.ingest:main"

[tool.uv]
package = true
